revisão de codigo: arq_caminho = '../vehicles_us.csv'

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -52415,7 +52415,7 @@
     "import plotly.express as px\n",
     "\n",
     "# Caminho para o arquivo\n",
-    "arq_caminho = 'C:/Users/bia/OneDrive/Documentos/01.Curso Análise de Dados/Sprint 5/vehicles_env/vehicles_us.csv'\n",
+    "arq_caminho = '../vehicles_us.csv'\n",
     "\n",
     "car_data = pd.read_csv(arq_caminho) # Lendo os dados\n",
     "fig = px.histogram(car_data, x=\"odometer\") # Criando um histograma\n",
